# TWM

./: pyproject.toml  run.sh
twm/: main.py
twm/components/: window_manager.py
twm/utils/: logUtils.py  preferences.py  query_methods.py  session_info.py
twm/utils/config/: confReader.py  initConf.py
