[tool.poetry]
name = "twm"
version = "0.1.0"
description = ""
authors = ["Legendyboi <legendyboi.dev@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ewmh = "^0.1.6"
x11util = "^1.3"
xcffib = "^1.5.0"
xpybutil = "^0.0.6"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
